--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection":"Data Source=192.168.1.118;Initial Catalog=SMARTMOB_PANTAREI;User Id=sa;Password=sinergia;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
+  "QualityControlApi": {
+    "Url": "http://192.168.1.118:8000/QualityControlVisual"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
